src/main/resources/tests/Semantics/bad/putType2.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
begin
   put(true); -- Error: put expects a character
end ExampleProcedure;
